// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caliper event from req nav:close returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Hid",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "internalName": "nav:close",
    "navType": "close",
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/viewer/client/nav%3FdraftId=testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req nav:goto returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "NavigatedTo",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "internalName": "nav:goto",
    "navType": "goto",
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq#toReq",
  "referrer": "https://hostnameReq/api/draft/testDraftIdReq#fromReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "NavigationEvent",
}
`;

exports[`Caliper event from req nav:lock returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Deactivated",
  "actor": "https://hostnameReq/api/viewer/client",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "internalName": "nav:lock",
    "navType": "lock",
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/viewer/client/nav%3FdraftId=testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req nav:open returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Showed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "internalName": "nav:open",
    "navType": "open",
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/viewer/client/nav%3FdraftId=testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req nav:toggle returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Toggled",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "internalName": "nav:toggle",
    "isOpen": undefined,
    "navType": "toggle",
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/viewer/client/nav%3FdraftId=testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req nav:unlock returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Activated",
  "actor": "https://hostnameReq/api/viewer/client",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "internalName": "nav:unlock",
    "navType": "unlock",
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/viewer/client/nav%3FdraftId=testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req question:checkAnswer returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Submitted",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/practice/testDraftIdReq/testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req question:hide returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Hid",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req question:hideExplanation returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Hid",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https://hostnameReq/api/draft/testDraftIdReq?context=explanation#testQuestionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req question:retry returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Reset",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https://hostnameReq/api/practice/testDraftIdReq/testQuestionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req question:setResponse returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Completed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": Object {
    "attempt": "https://hostnameReq/api/attempt/testAttemptIdReq",
    "extensions": Object {
      "selectedTargets": undefined,
      "targetId": undefined,
    },
    "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
    "type": "Response",
  },
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https://hostnameReq/api/draft/testDraftIdReq",
  "type": "AssessmentItemEvent",
}
`;

exports[`Caliper event from req question:showExplanation returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Viewed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https://hostnameReq/api/draft/testDraftIdReq?context=explanation#testQuestionIdReq",
  "type": "ViewEvent",
}
`;

exports[`Caliper event from req question:view returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Viewed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "ViewEvent",
}
`;

exports[`Caliper event from req score:clear returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Reset",
  "actor": "https://hostnameReq/api/server",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "urn:uuid:testIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https://hostnameReq/api/practice/testDraftIdReq/testItemIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req score:set returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Graded",
  "actor": "https://hostnameReq/api/viewer/client",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": Object {
    "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
    "attempt": "https://hostnameReq/api/practice/testDraftIdReq/testItemIdReq",
    "dateCreated": "2016-09-22T16:57:14.500Z",
    "id": "urn:uuid:testIdReq",
    "maxScore": 100,
    "scoreGiven": "scoreReq",
    "scoredBy": "https://hostnameReq/api/viewer/client",
    "type": "Score",
  },
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/practice/testDraftIdReq/testItemIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "GradeEvent",
}
`;

exports[`Caliper event from req viewer:close returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "LoggedOut",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/system",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https://hostnameReq/api/draft/testDraftIdReq",
  "type": "SessionEvent",
}
`;

exports[`Caliper event from req viewer:inactive returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Abandoned",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "inactiveDuration": "testInactiveDurationReq",
    "lastActiveTime": "testLastActiveTimeReq",
    "previewMode": false,
    "type": "inactive",
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req viewer:leave returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Abandoned",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
    "type": "leave",
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req viewer:return returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Resumed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
    "relatedEventId": "testRelatedEventIdreq",
    "type": "return",
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req viewer:returnFromInactive returns the expected snapshot 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Resumed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "inactiveDuration": "testInactiveDurationReq",
    "lastActiveTime": "testLastActiveTimeReq",
    "previewMode": false,
    "relatedEventId": "testRelatedEventIdreq",
    "type": "returnFromInactive",
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:DEADBEEF-0000-DEAD-BEEF-1234DEADBEEF",
  "object": "https://hostnameReq/api/draft/testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "type": "Event",
}
`;
